# hypermap

./: .eslintrc.cjs  .gitignore  .swcrc  AGENTS.md  CODE_OF_CONDUCT.md  Caddyfile  README.md  hypermap.js  hypermapShim.js  main.js  mockTodoServer.js  package-lock.json  package.json  test.js  wrapper.js
docs/: tutorial.md
example_server/: LICENSE  README.md  app.ts
example_server/assets/: order.js  sentiment.js  stocks.js
explorer/: README.md  index.html
hypermap_shim/: LICENSE  README.md  index.html  index.js  package-lock.json  package.json  tsconfig.json
hypermap_shim/src/: Hyperlist.js  Hypermap.js  hypermap_shim.js  index.js
hypermap_shim/src/utils/: json_processing.js
hypermap_shim/test/: index.html
hypermap_shim/test/assets/: set.js
hypermap_shim/tests/: index.html
mech/: .swcrc  index.js  package-lock.json  package.json  tsconfig.json  wrapper.js
mech/src/: HyperProxyHandler.js  Hyperlist.js  HyperlistProxy.js  Hypermap.js  Mech.js  Tab.js
mech/src/assets/: shim.js
mech/src/utils/: json_processing.js
mech/tests/: mockTodoServer.js  test.js  tsconfig.json
mech/tests/mock_assets/: test.js
mech_browser/: LICENSE  README.md  index.js  package-lock.json  package.json
mech_cli/: Cargo.toml
mech_cli/src/: main.rs  servo_daemon.rs
mech_cli/tests/: e2e_basic.sh
mech_posix/: Cargo.toml  Makefile  README.md  SKILL.md  com.hypermap.mech.varlink
mech_posix/doc/: mech.1  mech.1.scd
mech_posix/src/: lib.rs  main.rs  mechd.rs
mech_posix/tests/: e2e_basic.sh
shim/: README.md  package-lock.json  package.json
shim/src/: hypermap_shim.js  index.js
shim/tests/: index.html
shim/tests/assets/: set.js
spec/: Makefile  README.md  errata.md  index.bs
src/: Client.js  Hyperlist.js  Hypermap.js  Mech.js  Tab.js  hypermap.js  hypermapShim.js  main.js
src/assets/: shim.js
tests/: mockTodoServer.js  test.js
tests/mock_assets/: fooScript.js  test.js
www/: LICENSE  README.md  _config.ts  about.md  converting-an-api.md  deno.json  explorer.md  getting_started.md  index.md  serve.js  spec.md  styles.css
www/_includes/layouts/: base.njk  docs.njk  embed.njk  home.njk
www/_includes/partials/: footer.njk  nav.njk  sidebar.njk
www/_site/: index.html  styles.css
www/_site/about/: index.html
www/_site/converting-an-api/: index.html
www/_site/getting_started/: index.html
www/docs/: converting-an-api.md  index.md  why.md
