[package]
name = "mech_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.24"
tao = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
